# grokking_adversarial

./: .gitignore  autorunner.py  omnigrok.ipynb  pyproject.toml  test.cpp  test.ipynb  test.py
configs/: autorun.yaml  calc_config.yaml  log_config.yaml  main.yaml  main2.yaml
ipynb/: calc.ipynb
src/: attacks.py  dataset.py  main.py  profiler.py
src/models/: mlp.py  preact_resnet.py
src/schema/: config.py
src/utils/: constants.py  dataset.py
src/workflow/: __init__.py  train.py  validate.py
